--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "express": "^5.2.1",
     "express-rate-limit": "^8.2.1",
     "jsonwebtoken": "^9.0.3",
+    "nodemailer": "^8.0.0",
     "pg": "^8.16.3"
   },
   "devDependencies": {
